crates/core/tests/ui/proc/svc/ctor_rval_omit.stderr
error: This method looks like a constructor, but it does not return ffi::Result<Self, _>
  --> tests/ui/proc/svc/ctor_rval_omit.rs:13:12
   |
13 |     pub fn create() {}
   |            ^^^^^^
